--- a/css/style.css
+++ b/css/style.css
@@ -867,15 +867,15 @@ footer {
 #sponsors .industry .image-container.centene {
 	float: left;
 	width: 45%;
-	margin-top: 12%;
-	margin-left: 5%;
+	margin-top: 8%;
+	margin-left: 14%;
 }
 
 #sponsors .industry .image-container.panera {
-	width: 35%;
+	width: 25%;
 	margin-top: -1%;
 	float: right;
-	margin-right: 5%;
+	margin-right: 14%;
 }
 
 #sponsors .industry .image-container.es {
@@ -906,54 +906,77 @@ footer {
 	margin-top: 5%;
 }
 
-#sponsors .industry-other .image-container.master {
-	float: left;
-	margin-top: 6%;
-}
-
 #sponsors .industry-other .image-container.edward {
-	float: right;
-	margin-top: 7%;
+	float: left;
+	margin-top: 8%;
+	margin-left: 8%;
 }
 
-#sponsors .industry-other .image-container.labs {
-	width: 22%;
-	float: left;
-	margin-left: 5%;
-	margin-right: 10%;
+#sponsors .industry-other .image-container.emerson {
+	width: 20%;
 	margin-top: 3%;
-}
-
-#sponsors .industry-other .image-container.rr {
-	float: left;
-	width: 27%;
-	margin-top: 2%;
 }
 
 #sponsors .industry-other .image-container.hw {
 	float: right;
 	display: block;
 	width: 27%;
+	margin-right: 9%;
+	margin-top: 6%;
+}
+
+#sponsors .industry-other .image-container.labs {
+	width: 22%;
+	float: left;
+	margin-left: 12%;
 	margin-right: 2%;
+	margin-top: 3%;
+}
+
+#sponsors .industry-other .image-container.master {
+	float: left;
 	margin-top: 2%;
+}
+
+#sponsors .industry-other .image-container.git {
+	float: right;
+	width: 15%;
+	clear: both;
+	margin-right: 16%;
+	margin-top: -5%;
+}
+
+#sponsors .industry-other .image-container.rr {
+	float: left;
+	width: 26%;
+	margin-top: 2%;
+	margin-left: 10%;
+}
+
+#sponsors .industry-other .image-container.union {
+	float: left;
+	width: 23%;
+	margin-top: 2%;
+	margin-left: 4%;
+}
+
+#sponsors .industry-other .image-container.software {
+	float: right;
+	width: 17%;
+	margin-right: 15%;
+	margin-top: 2%;
+}
+
+#sponsors .industry-other .image-container.cbo {
+	clear: both;
+	width:12%;
+	float: left;
+	margin-top: 2%;
+	margin-left: 45%;
 }
 
 #sponsors .row-container {
 	width: 100%;
-}
-
-#sponsors .industry-other .image-container.git {
-	float: left;
-	width: 15%;
-	clear: both;
-	margin-left: 8%;
-	margin-top: 6%;
-}
-
-#sponsors .industry-other .image-container.emerson {
-	width: 20%;
-	margin-top: 3%;
-	margin-left: 5%;
 }
 
 #sponsors .industry-other .image-container.eng {
@@ -966,20 +989,20 @@ footer {
 #sponsors .industry-small .image-container {
 	width: 17%;
 	display: inline-block;
-	margin-top: 5%;
+	margin-top: 3.5%;
 }
 
 #sponsors .industry-small .image-container.balsamiq {
 	clear: both;
 	float: left;
-	margin-left: 23%;
+	margin-left: 38%;
 	width: 12%;
-	margin-right: 6%;
+	margin-right: 2%;
 }
 
 #sponsors .industry-small .image-container.brewer {
 	float: left;
-	margin-top: 4%;
+	margin-top: 3%;
 }
 
 #sponsors .industry-small .image-container.cs {
@@ -1003,57 +1026,60 @@ footer {
 }
 
 #sponsors .partners .image-container {
-	width: 12%;
+	width: 15%;
 	display: inline-block;
 	margin-top: 2%;
 }
 
 #sponsors .partners .image-container.mlh {
 	float: left;
-	margin-left: 9%;
+	margin-left: 28%;
 	margin-top: 3%;
 }
 
 #sponsors .partners .image-container.acm {
 	float: left;
-	width: 8%;
-	margin-left: 13%;
+	width: 9%;
+	margin-left: 5%;
 }
 
 #sponsors .partners .image-container.acm-w {
 	float: left;
-	margin-left: 13%;
-}
-
-#sponsors .partners .image-container.jet {
-	float: right;
-	margin-right: 9%;
+	margin-left: 5%;
 }
 
 #sponsors .partners .image-container.tech {
 	clear: both;
 	float: left;
-	margin-left: 9%;
+	margin-left: 32%;
 	margin-top: 2.5%;
+	width: 10%;
+	margin-right: 1%;
 }
 
-#sponsors .partners .image-container.wolfram {
+#sponsors .partners .image-container.jet {
 	float: left;
-	margin-left: 10%;
-	margin-top: 3%;
+	width: 6%;
+	margin-right: 1%;
 }
 
 #sponsors .partners .image-container.sketch {
 	float: left;
-	margin-left: 11%;
-	margin-top: 2.75%;
+	width: 7%;
+	margin-right: 2%;
+	margin-top: 1%;
+}
+
+#sponsors .partners .image-container.wolfram {
+	float: left;
+	width: 5%;
+	margin-right: 2%;
 }
 
 #sponsors .partners .image-container.do {
-	float: right;
-	margin-right: 6%;
-	width: 20%;
-	margin-top: 4%;
+	float: left;
+	width: 5%;
+	margin-right: 2%;
 }
 
 #sponsors .section-title {
