--- a/css/style.css
+++ b/css/style.css
@@ -335,13 +335,6 @@ footer {
     height: 115vh;
 		line-height: 200px;
 
-		clip-path: polygon(
-	    0 0,
-	    100% 0,
-	    100% 100%,
-	    0 calc(100% - 3vw)
-	  );
-
 }
 
 #intro h3 {
@@ -446,6 +439,59 @@ footer {
 }
 
 /*---------------------------------------
+	 Snippets section
+-----------------------------------------*/
+#snippets {
+	padding-top: 8rem;
+	padding-bottom: 8rem;
+	background-color: #eeeeee;
+}
+
+#snippets .row {
+	margin-bottom: 0;
+}
+
+#snippets p {
+	display: inline;
+	margin-left: auto;
+	margin-right: auto;
+	color: rgba(128,128,128,0.9);
+}
+
+.stats {
+	display: flex;
+	flex-direction: column;
+	width: 85%;
+	margin-right: auto;
+	margin-left: auto;
+}
+
+.stat {
+	width: 24%;
+	display: inline-block;
+	margin: 0;
+	border-right: 1px solid rgba(128,128,128,0.45);
+}
+
+.stat:last-child {
+	border: none;
+}
+
+.number, .word {
+	display: flex;
+}
+
+.number p {
+	font-size: 3.25rem;
+	font-weight: 100;
+}
+
+.word p {
+	font-size: 1.75rem;
+	margin-bottom: 0;
+}
+
+/*---------------------------------------
    Overview  section
 -----------------------------------------*/
 
@@ -459,71 +505,71 @@ footer {
 	padding-bottom: 8rem;
 }
 
-.info {
-	width: 70%;
-	padding-top: 70%;
-	margin-top: 3rem;
-	position: relative;
-	border-radius: 100%;
+.overview-info {
+	width: 100%;
+	display: flex;
 }
 
-.info h2 {
-	position: absolute;
-	top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.overview-left, .overview-right {
+	display: inline-block;
+	float: left;
+}
+
+.overview-left {
+	width: 35%;
+	margin-right: 15%;
+}
+
+.overview-right {
+	width: 50%;
+	display: flex;
+	flex-direction: column;
+}
+
+.overview-right .row {
+	justify-content: space-around;
+}
+
+.title {
+	border-left: 4px solid #78BE20;
+	padding-left: 2rem;
+	padding-top: 2.5rem;
+	padding-bottom: 2.5rem;
+}
+
+.title h2 {
+	margin: 0;
+	font-weight: 100;
+	color: #78BE20;
+}
+
+.bold {
+	font-weight: 900;
+}
+
+.description {
+	margin-top: 5rem;
+}
+
+.info-section {
+	width: 45%;
+	display: inline-block;
+}
+
+.info-section:nth-child(2n+1) {
+	margin-right: 5%;
+}
+
+.info-words h4 {
+	display: inline-block;
 	margin-top: 0;
-	margin-bottom: 0;
-	color: white;
-	font-size: 0.8rem;
+	margin-bottom: 0.1rem;
 }
 
-@media (min-width: 450px) {
-	.info h2 {
-		font-size: 1.15rem;
-	}
+.info-words p {
+	margin-left: 5rem;
+	font-size: 1.2rem;
 }
-
-@media (min-width: 530px) {
-	.info h2 {
-		font-size: 1.4rem;
-	}
-}
-
-@media (min-width: 650px) {
-	.info h2 {
-		font-size: 1.6rem;
-	}
-}
-
-@media (min-width: 700px) {
-	.info h2 {
-		font-size: 1.75rem;
-	}
-}
-
-@media (min-width: 768px) {
-	.info-offset {
-		margin-left: calc(100% - 75% - (6 * 15px));
-	}
-}
-
-@media (min-width: 991px) {
-	.info h2 {
-		font-size: 1.6rem;
-	}
-
-	.info-offset {
-		margin-left: 25%;
-	}
-}
-
-@media (min-width: 1200px) {
-	.info h2 {
-		font-size: 2rem;
-	}
-}
-
 
 /*---------------------------------------
     Detail section
@@ -554,12 +600,6 @@ footer {
 -----------------------------------------*/
 #speakers {
     background: #036084;
-		clip-path: polygon(
-	    0 3vw,
-	    100% 0,
-	    100% 100%,
-	    0 calc(100% - 3vw)
-	  );
 }
 
 #speakers h3 {
@@ -617,21 +657,23 @@ footer {
   background: #78BE20;
   padding-top: 8rem;
   padding-bottom: 8rem;
+}
 
-	clip-path: polygon(
-		0 3vw,
-		100% 0,
-		100% 100%,
-		0 calc(100% - 3vw)
-	);
+.panel-container {
+	display: flex;
 }
 
 #faq .panel-group {
-  margin-top: 32px;
+  margin-top: 24px;
+	width: 48%;
+}
+
+.panel-group:first-child {
+	margin-right: 4%;
 }
 
 #faq .panel-group .panel {
-  margin-bottom: 8px;
+  margin-bottom: 16px;
 }
 
 #faq .panel-default {
@@ -657,7 +699,7 @@ footer {
 }
 
 #faq .panel-heading .panel-title a[data-toggle="collapse"] {
-  font-size: 18px;
+  font-size: 12px;
   font-weight: 500;
   position: relative;
   display: block;
@@ -684,14 +726,6 @@ footer {
 /*---------------------------------------
    Program section
 -----------------------------------------*/
-#program {
-	clip-path: polygon(
-    0 0,
-    100% 0,
-    100% 100%,
-    0 calc(100% - 6vw)
-  );
-}
 
 #program h4 {
     color: #005F83;
@@ -1172,12 +1206,6 @@ footer {
   background-attachment: fixed;
 	background: #fed132;
 	padding-top: 5rem;
-  clip-path: polygon(
-	 0 3vw,
-	 100% 0,
-	 100% 100%,
-	 0 100%
-	 );
 }
 
 footer p {
