--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,17 @@ section {
 }
 
 .section-title {
-	margin-bottom: 2.5rem;
+	margin: 0;
+	border-left: 4px solid #036084;
+	padding-top: 1rem;
+	padding-bottom: 1rem;
+}
+
+.section-title h2 {
+	margin: 0;
+	margin-left: 2rem;
+	color: #036084;
+	font-size: 2.25rem;
 }
 
 @media (max-width: 800px) {
@@ -471,6 +481,8 @@ footer {
 	display: inline-block;
 	margin: 0;
 	border-right: 1px solid rgba(128,128,128,0.45);
+	padding-top:1.5rem;
+	padding-bottom:1.5rem;
 }
 
 .stat:last-child {
@@ -482,7 +494,7 @@ footer {
 }
 
 .number p {
-	font-size: 3.25rem;
+	font-size: 4rem;
 	font-weight: 100;
 }
 
@@ -524,10 +536,7 @@ footer {
 	width: 50%;
 	display: flex;
 	flex-direction: column;
-}
-
-.overview-right .row {
-	justify-content: space-around;
+	justify-content: space-between;
 }
 
 .title {
@@ -599,13 +608,29 @@ footer {
    Speakers section
 -----------------------------------------*/
 #speakers {
-    background: #036084;
+    background: #eeeeee;
+}
+
+#speakers h2 {
+	color: #78BE20;
+	display: inline-block;
+	width: inherit;
+}
+
+#speakers .section-title {
+	display: inline-block;
+	float: left;
+	border-color: #78BE20;
+}
+
+#speakers .row:first-child > * {
+	margin-left: 15px;
 }
 
 #speakers h3 {
     font-size: 16px;
     margin-bottom: 0px;
-		color: white;
+		color: #888888;
 }
 
 @media (max-width: 370px) {
@@ -618,7 +643,7 @@ footer {
 }
 
 #speakers h6 {
-  color: #bbbbbb;
+  color: #888888;
   margin-top: 4px;
 }
 
@@ -649,14 +674,25 @@ footer {
 	}
 }
 
+/*---------------------------------------
+   Faq section title
+-----------------------------------------*/
+#faq-title {
+	background: #eeeeee;
+	padding-top: 4rem;
+}
 
 /*---------------------------------------
    Faq section
 -----------------------------------------*/
 #faq {
-  background: #78BE20;
-  padding-top: 8rem;
-  padding-bottom: 8rem;
+  padding-top: 2.5rem;
+	background-color: #eeeeee;
+}
+
+.panel {
+	-webkit-box-shadow: none;
+	box-shadow: none;
 }
 
 .panel-container {
@@ -673,7 +709,7 @@ footer {
 }
 
 #faq .panel-group .panel {
-  margin-bottom: 16px;
+  margin-bottom: 26px;
 }
 
 #faq .panel-default {
@@ -681,8 +717,8 @@ footer {
 }
 
 #faq .panel-default>.panel-heading {
-  background: #f0f0f0;
   color: #505050;
+	background-color: #ffffff;
 }
 
 #faq .panel-heading {
@@ -726,6 +762,31 @@ footer {
 /*---------------------------------------
    Program section
 -----------------------------------------*/
+.details-image {
+	width: 48%;
+	height: 100%;
+	margin-right: 4%;
+	background-image: url("../images/details.jpg");
+	background-size: cover;
+	display: inline-block;
+}
+
+.details-image, .details-text {
+	float: left;
+}
+
+.details-image img {
+	width: inherit;
+}
+
+.details-container {
+	height: 80vh;
+	width: 100%;
+}
+
+.details-text .section-title {
+	margin-bottom: 2rem;
+}
 
 #program h4 {
     color: #005F83;
@@ -742,10 +803,6 @@ footer {
 
 #program span {
     padding-right: 12px;
-}
-
-#program img {
-  border-radius: 50%;
 }
 
 #program tr th:first-child, #program tr td:first-child {
