--- a/css/style.css
+++ b/css/style.css
@@ -924,9 +924,22 @@ footer {
 /*---------------------------------------
    Sponsors section
 -----------------------------------------*/
+#sponsors {
+	padding-top: 2.5rem;
+}
+
 #sponsors h3 {
 	text-transform: uppercase;
 	font-weight: bold;
+}
+
+#sponsors .section-title {
+	display: inline-block;
+	border-color: #78BE20;
+}
+
+#sponsors .section-title h2 {
+	color: #78BE20;
 }
 
 @media (max-width: 550px) {
@@ -1261,12 +1274,13 @@ footer {
 -----------------------------------------*/
 footer {
   background-attachment: fixed;
-	background: #fed132;
-	padding-top: 5rem;
+	background: #666;
+	padding-top: 2.5rem;
 }
 
 footer p {
 	font-weight: bolder;
+	color: #ffffff;
 }
 
 /* Back top */
@@ -1307,7 +1321,7 @@ footer p {
 }
 
 .social-icon li a {
-    color: #666;
+    color: #ffffff;
     border-radius: 100px;
     font-size: 16px;
     text-decoration: none;
