--- a/css/style.css
+++ b/css/style.css
@@ -96,11 +96,6 @@ section {
 	width:10%;
 	z-index:10000;
 }
-@media (min-width: 768px) {
-	#mlh-trust-badge {
-		right: 50px;
-	}
-}
 
 #detail, #video,
 #speakers,
@@ -137,7 +132,7 @@ footer {
     padding: 14px 42px;
     margin: 3rem auto 0 auto;
 		display: block;
-		width: 255px;
+		width: 155px;
     -webkit-transition: all 0.4s ease-in-out;
     transition: all 0.4s ease-in-out;
 }
@@ -234,6 +229,21 @@ footer {
 
 .custom-navbar .navbar-collapse {
 	margin-left: auto;
+	margin-right: 140px;
+}
+
+@media (max-width: 1000px) {
+	.custom-navbar .navbar-collapse {
+		margin-left: auto;
+		margin-right: calc(10% + 40px);
+	}
+}
+
+@media (max-width: 600px) {
+	.custom-navbar .navbar-collapse {
+		margin-left: auto;
+		margin-right: 100px;
+	}
 }
 
 .custom-navbar .navbar-header {
@@ -351,8 +361,17 @@ footer {
   letter-spacing: 2px;
 }
 
+#intro h1 {
+	font-size: 7rem;
+	letter-spacing: 10px;
+}
+
 #intro .container {
 	display: inline-block;
+}
+
+#intro .row {
+	margin-bottom: 0;
 }
 
 .havener-link {
@@ -503,6 +522,48 @@ footer {
 	margin-bottom: 0;
 }
 
+@media (max-width: 768px) {
+	.number p {
+		font-size: 2.75rem;
+		margin-bottom: 0;
+	}
+
+	.word p {
+		font-size: 1rem;
+		margin-bottom: 0;
+	}
+
+	.stat {
+		padding-top: 1rem;
+		padding-bottom: 1rem;
+	}
+
+	#snippets {
+		padding-top: 3rem;
+		padding-bottom: 3rem;
+	}
+}
+
+@media (max-width: 450px) {
+	.number p {
+		font-size: 2.25rem;
+	}
+
+	.word p {
+		font-size: 0.7rem;
+	}
+
+	.stat {
+		padding-top: 0.5rem;
+		padding-bottom: 0.5rem;
+	}
+
+	#snippets {
+		padding-top: 2rem;
+		padding-bottom: 2rem;
+	}
+}
+
 /*---------------------------------------
    Overview  section
 -----------------------------------------*/
@@ -582,6 +643,80 @@ footer {
 .info-words p {
 	margin-left: 5rem;
 	font-size: 1.2rem;
+}
+
+@media (max-width: 1200px) {
+	.info-words h4 {
+		font-size: 1.5rem;
+	}
+
+	.info-words p {
+		margin-left: 5rem;
+		font-size: 1rem;
+	}
+}
+
+@media (max-width: 991px) {
+	.info-words h4 {
+		font-size: 1.1rem;
+	}
+
+	.info-words p {
+		margin-left: 5rem;
+		font-size: 0.8rem;
+	}
+}
+
+@media (max-width: 768px) {
+	.overview-info {
+		flex-direction: column;
+	}
+
+	.overview-left, .overview-right {
+		width: 100%;
+	}
+
+	.overview-left {
+		margin-right: 0;
+		margin-bottom: 3rem;
+	}
+
+	.info-section {
+		width: 50%;
+	}
+
+	.title {
+		margin-bottom: -2.75rem;
+	}
+
+	.info-words h4 {
+		font-size: 1.1rem;
+	}
+
+	.info-words p {
+		margin-left: 4rem;
+		font-size: 0.8rem;
+	}
+
+	.flaticon-lightbulb:before {
+		font-size: 4rem;
+		margin-top: -0.4rem;
+	}
+}
+
+@media (max-width: 450px) {
+	.info-words h4 {
+		font-size: 0.9rem;
+	}
+
+	.info-words p {
+		font-size: 0.7rem;
+	}
+
+	.flaticon-lightbulb:before {
+		font-size: 3rem;
+		margin-top: -0.4rem;
+	}
 }
 
 /*---------------------------------------
@@ -705,6 +840,18 @@ footer {
 	width: 48%;
 }
 
+@media (max-width: 768px) {
+	.panel-container {
+		flex-direction: column;
+	}
+
+	#faq .panel-group {
+	  margin-top: 0;
+		margin-bottom: 0;
+		width: 100%;
+	}
+}
+
 .panel-group:first-child {
 	margin-right: 4%;
 }
@@ -787,6 +934,14 @@ footer {
 
 .details-text .section-title {
 	margin-bottom: 2rem;
+}
+
+@media (max-width: 768px) {
+	.details-image {
+		width: 100%;
+		margin-bottom: 3rem;
+		height: 75%;
+	}
 }
 
 #program {
