--- a/css/style.css
+++ b/css/style.css
@@ -1066,6 +1066,23 @@ footer {
 	margin-left: auto;
 }
 
+@media (max-width: 768px) {
+	#sponsors .industry .image-container.centene {
+		width: 58%;
+		margin-left: 0;
+		margin-top: 11%;
+	}
+
+	#sponsors .industry .image-container.panera {
+		width: 38%;
+		margin-right: 1%;
+	}
+
+	#sponsors .industry .image-container.es {
+		width: 85%;
+	}
+}
+
 #sponsors .industry-mid .image-container {
 	width: 28%;
 }
@@ -1080,6 +1097,22 @@ footer {
 	float: right;
 	margin-top: 5%;
 	margin-right: 20%;
+}
+
+@media (max-width: 768px) {
+	#sponsors .industry-mid .image-container {
+		width: 38%;
+	}
+
+	.tradebot {
+		margin-top: 4%;
+		margin-left: 10%;
+	}
+
+	.mixmax {
+		margin-top: 2%;
+		margin-right: 10%;
+	}
 }
 
 #sponsors .industry-other .image-container {
@@ -1130,12 +1163,6 @@ footer {
 	margin-top: -4%;
 }
 
-@media (max-width: 768px) {
-	#sponsors .industry-other .image-container.git {
-		margin-top: -8%;
-	}
-}
-
 #sponsors .industry-other .image-container.rr {
 	float: left;
 	margin-top: 2%;
@@ -1179,6 +1206,87 @@ footer {
 	margin-right: 24%;
 }
 
+@media (max-width: 768px) {
+	#sponsors .industry-other .image-container.edward {
+		margin-top: 5%;
+		margin-left: 11%;
+		margin-right: 4%;
+		width: 26%;
+	}
+
+	#sponsors .industry-other .image-container.emerson {
+		width: 20%;
+		margin-top: -0.5%;
+	}
+
+	#sponsors .industry-other .image-container.hw {
+		margin-right: 12%;
+		margin-top: 3%;
+		width: 23%;
+	}
+
+	#sponsors .industry-other .image-container.labs {
+		width: 22%;
+		float: left;
+		margin-left: 11%;
+		margin-right: 4%;
+		margin-top: 3%;
+	}
+
+	#sponsors .industry-other .image-container.master {
+		float: left;
+		margin-top: 3%;
+		width: 27%;
+	}
+
+	#sponsors .industry-other .image-container.git {
+		margin-top: -9%;
+		width: 15%;
+		clear: both;
+		margin-right: 17%;
+	}
+
+	#sponsors .industry-other .image-container.rr {
+		float: left;
+		margin-top: 2%;
+		margin-left: 12%;
+		margin-right: -1%;
+		width: 24%;
+	}
+
+	#sponsors .industry-other .image-container.union {
+		float: left;
+		width: 24%;
+		margin-top: 1%;
+		margin-left: 4%;
+	}
+
+	#sponsors .industry-other .image-container.software {
+		float: right;
+		width: 18%;
+		margin-right: 15%;
+		margin-top: 1%;
+	}
+
+	#sponsors .industry-other .image-container.cbo {
+		width: 14%;
+		margin-top: 1.5%;
+		margin-left: 18%;
+		margin-right: 3%;
+	}
+
+	#sponsors .industry-other .image-container.vet {
+		margin-top: 0;
+		width: 30%;
+	}
+
+	#sponsors .industry-other .image-container.linode {
+		width: 15%;
+		margin-top: 0;
+		margin-right: 17%;
+	}
+}
+
 #sponsors .row {
 	margin-left: 0;
 }
@@ -1202,47 +1310,10 @@ footer {
 	margin-top: 2.5%;
 }
 
-#sponsors .partners .image-container.coab,
-#sponsors .partners .image-container.eng {
-	float: left;
-	clear: both;
-	margin-left: 37%;
-	margin-top: 2%;
-	width: 14%;
-}
-
-#sponsors .partners .image-container.it,
-#sponsors .partners .image-container.cs {
-	float: right;
-	width: 15%;
-	margin-right: 31%;
-	margin-top: 1.5%;
-}
-
 #sponsors .partners .image-container {
 	width: 15%;
 	display: inline-block;
 	margin-top: 2%;
-}
-
-#sponsors .partners .image-container.mlh {
-	float: left;
-	margin-left: 36%;
-	margin-top: 3.5%;
-	width: 9%;
-}
-
-#sponsors .partners .image-container.acm {
-	float: left;
-	width: 6%;
-	margin-left: 5%;
-}
-
-#sponsors .partners .image-container.acm-w {
-	float: left;
-	margin-left: 5%;
-	width: 9%;
-	margin-top: 2.5%;
 }
 
 #sponsors .partners .image-container.tech {
@@ -1278,6 +1349,143 @@ footer {
 	float: left;
 	width: 3%;
 	margin-right: 2%;
+}
+
+@media (max-width: 768px) {
+	#sponsors .industry-small .image-container.balsamiq {
+		margin-left: 17%;
+		width: 12%;
+		margin-right: 2%;
+		margin-top: -1.5%;
+	}
+
+	#sponsors .industry-small .image-container.brewer {
+		margin-top: -2.5%;
+		width: 19%;
+		margin-right: 2%;
+	}
+
+	#sponsors .partners .image-container.tech {
+		margin-left: 0;
+		margin-top: -1.5%;
+		width: 8%;
+		margin-right: 1%;
+		clear: none;
+	}
+
+	#sponsors .partners .image-container.jet {
+		float: left;
+		width: 4%;
+		margin-right: 1%;
+		margin-top: -1.5%;
+	}
+
+	#sponsors .partners .image-container.sketch {
+		float: left;
+		width: 5%;
+		margin-right: 2%;
+		margin-top: -2%;
+	}
+
+	#sponsors .partners .image-container.wolfram {
+		float: left;
+		width: 3%;
+		margin-right: 2%;
+		margin-top: -1%;
+	}
+
+	#sponsors .partners .image-container.do {
+		float: left;
+		width: 3%;
+		margin-right: 2%;
+		margin-top: -1%;
+	}
+}
+
+#sponsors .partners .image-container.mlh {
+	float: left;
+	margin-left: 36%;
+	margin-top: 3.5%;
+	width: 9%;
+}
+
+#sponsors .partners .image-container.acm {
+	float: left;
+	width: 6%;
+	margin-left: 5%;
+}
+
+#sponsors .partners .image-container.acm-w {
+	float: left;
+	margin-left: 5%;
+	width: 9%;
+	margin-top: 2.5%;
+}
+
+#sponsors .partners .image-container.coab,
+#sponsors .partners .image-container.eng {
+	float: left;
+	clear: both;
+	margin-left: 37%;
+	margin-top: 2%;
+	width: 14%;
+}
+
+#sponsors .partners .image-container.it,
+#sponsors .partners .image-container.cs {
+	float: right;
+	width: 15%;
+	margin-right: 31%;
+	margin-top: 1.5%;
+}
+
+@media (max-width: 768px) {
+	#sponsors .partners .image-container.mlh {
+		margin-left: 26%;
+		margin-top: 3.5%;
+		width: 14%;
+	}
+
+	#sponsors .partners .image-container.acm {
+		float: left;
+		width: 8%;
+		margin-left: 5%;
+	}
+
+	#sponsors .partners .image-container.acm-w {
+		float: left;
+		margin-left: 5%;
+		width: 13%;
+		margin-top: 2.5%;
+	}
+
+	#sponsors .partners .image-container.coab,
+	#sponsors .partners .image-container.eng {
+		float: left;
+		clear: both;
+		margin-left: 11%;
+		margin-top: 2%;
+		width: 17%;
+		margin-right: 2%;
+	}
+
+	#sponsors .partners .image-container.coab {
+		clear: none;
+		margin-left: 0
+	}
+
+	#sponsors .partners .image-container.it,
+	#sponsors .partners .image-container.cs {
+		float: left;
+		width: 17%;
+		margin-right: 2%;;
+		margin-top: 2%;
+	}
+
+	#sponsors .partners .image-container.it {
+		margin-top: 1.9%;
+		margin-right: 0;
+	}
 }
 
 #sponsors .section-title {
