--- a/css/style.css
+++ b/css/style.css
@@ -831,6 +831,10 @@ footer {
 	display: inline-block;
 }
 
+.details-text {
+	width: 47%;
+}
+
 .details-image, .details-text {
 	float: left;
 }
@@ -920,7 +924,7 @@ footer {
 .nav-tabs > li.active > a,
 .nav-tabs > li.active > a:hover,
 .nav-tabs > li.active > a:focus {
-  color: #fed132;
+  color: #005F83;
   cursor: default;
   background-color: transparent;
   border: 1px solid transparent;
@@ -1287,6 +1291,24 @@ footer {
 	}
 }
 
+@media (max-width: 550px) {
+	#sponsors .industry-other .image-container.git {
+		margin-top: -10%;
+	}
+}
+
+@media (max-width: 450px) {
+	#sponsors .industry-other .image-container.git {
+		margin-top: -11%;
+	}
+}
+
+@media (max-width: 375px) {
+	#sponsors .industry-other .image-container.git {
+		margin-top: -12.5%;
+	}
+}
+
 #sponsors .row {
 	margin-left: 0;
 }
@@ -1351,9 +1373,17 @@ footer {
 	margin-right: 2%;
 }
 
+#sponsors .partners .image-container.mule {
+	float: left;
+	clear: both;
+	width: 18%;
+	margin-left: 44.5%;
+	margin-top: 0.5%;
+}
+
 @media (max-width: 768px) {
 	#sponsors .industry-small .image-container.balsamiq {
-		margin-left: 17%;
+		margin-left: 35%;
 		width: 12%;
 		margin-right: 2%;
 		margin-top: -1.5%;
@@ -1366,39 +1396,45 @@ footer {
 	}
 
 	#sponsors .partners .image-container.tech {
-		margin-left: 0;
+		margin-left: 28%;
 		margin-top: -1.5%;
-		width: 8%;
+		width: 10%;
 		margin-right: 1%;
-		clear: none;
 	}
 
 	#sponsors .partners .image-container.jet {
 		float: left;
-		width: 4%;
+		width: 6%;
 		margin-right: 1%;
 		margin-top: -1.5%;
 	}
 
 	#sponsors .partners .image-container.sketch {
 		float: left;
-		width: 5%;
+		width: 7%;
 		margin-right: 2%;
 		margin-top: -2%;
 	}
 
 	#sponsors .partners .image-container.wolfram {
 		float: left;
-		width: 3%;
+		width: 5%;
 		margin-right: 2%;
 		margin-top: -1%;
 	}
 
 	#sponsors .partners .image-container.do {
 		float: left;
-		width: 3%;
+		width: 5%;
 		margin-right: 2%;
 		margin-top: -1%;
+	}
+
+	#sponsors .partners .image-container.mule {
+		width: 23%;
+		margin-left: 38%;
+		margin-top: -2.5%;
+		margin-bottom: -4%;
 	}
 }
 
