--- a/css/style.css
+++ b/css/style.css
@@ -825,7 +825,6 @@ footer {
 -----------------------------------------*/
 .details-image {
 	width: 48%;
-	height: 100%;
 	margin-right: 4%;
 	background-image: url("../images/details.jpg");
 	background-size: cover;
@@ -834,6 +833,7 @@ footer {
 
 .details-text {
 	width: 47%;
+	margin-bottom: 6rem;
 }
 
 .details-image, .details-text {
@@ -845,7 +845,7 @@ footer {
 }
 
 .details-container {
-	height: 80vh;
+	display: flex;
 	width: 100%;
 }
 
@@ -858,6 +858,11 @@ footer {
 		width: 100%;
 		margin-bottom: 3rem;
 		height: 75%;
+	}
+
+	.details-container {
+		display: block;
+		height: 80vh;
 	}
 }
 
@@ -893,19 +898,25 @@ footer {
 }
 
 #program tr th:first-child, #program tr td:first-child {
-	width: 25%;
+	width: 30%;
 }
 
 #program tr th:nth-child(2), #program tr td:nth-child(2) {
-	width: 55%;
+	width: 36%;
 }
 
 #program tr th:last-child, #program tr td:last-child {
-	width: 20%;
+	width: 33.333333%;
+}
+
+@media (max-width: 768px) {
+	div.tab-content {
+		padding-bottom: 8rem;
+	}
 }
 
 .nav-tabs {
-  margin-bottom: 20px;
+  margin-bottom: 0.5rem;
 }
 .nav-tabs > li {
   float: left;
@@ -918,6 +929,39 @@ footer {
   line-height: 1.42857143;
   border: none;
   border-radius: 0px;
+}
+@media (max-width: 991px) {
+	tbody {
+		font-size: 1rem;
+	}
+	thead {
+		font-size: 1.2rem;
+	}
+	.nav-tabs > li > a {
+		font-size: 1.2rem;
+	}
+}
+@media (max-width: 460px) {
+	.nav-tabs > li > a {
+		font-size: 0.9rem;
+	}
+	tbody {
+		font-size: 0.7rem;
+	}
+	thead {
+		font-size: 0.9rem;
+	}
+}
+@media (max-width: 365px) {
+	.nav-tabs > li > a {
+		font-size: 0.7rem;
+	}
+	tbody {
+		font-size: 0.6rem;
+	}
+	thead {
+		font-size: 0.7rem;
+	}
 }
 .nav-tabs > li > a:hover {
   background-color: transparent;
@@ -933,6 +977,11 @@ footer {
 }
 .tab-content {
   padding-top: 20px;
+}
+
+.tab-content * {
+	padding-left: 0;
+	padding-right: 0;
 }
 
 .date-container {
@@ -1746,10 +1795,6 @@ footer p {
   #detail .col-md-4,
   #register form {
     padding-top: 32px;
-  }
-
-  .nav-tabs > li > a {
-    font-size: 13px;
   }
 
   #program img {
