--- a/css/style.css
+++ b/css/style.css
@@ -941,6 +941,11 @@ footer {
 		font-size: 1.2rem;
 	}
 }
+@media (max-width: 768px) {
+	.nav-tabs {
+		margin-top: 3rem;
+	}
+}
 @media (max-width: 460px) {
 	.nav-tabs > li > a {
 		font-size: 0.9rem;
