--- a/css/style.css
+++ b/css/style.css
@@ -1172,7 +1172,7 @@ footer {
 
 .mixmax {
 	float: right;
-	margin-top: 5%;
+	margin-top: 7%;
 	margin-right: 20%;
 }
 
@@ -1204,11 +1204,13 @@ footer {
 	margin-left: 25%;
 	margin-right: 4%;
 	width: 16%;
+	clear: both;
 }
 
 #sponsors .industry-other .image-container.emerson {
 	width: 14%;
 	margin-top: 4.5%;
+	float: left;
 }
 
 #sponsors .industry-other .image-container.hw {
