--- a/css/style.css
+++ b/css/style.css
@@ -1583,6 +1583,14 @@ footer {
 	margin-top: 1.5%;
 }
 
+#sponsors .partners .image-container.sport {
+	float: left;
+	clear: both;
+	margin-left: 44%;
+	margin-top: 0%;
+	width: 19%;
+}
+
 @media (max-width: 768px) {
 	#sponsors .industry-small .image-container.balsamiq {
 		margin-left: 35%;
@@ -1642,6 +1650,12 @@ footer {
 	#sponsors .partners .image-container.js {
 		width: 19%;
     margin-top: -1.1%;
+	}
+
+	#sponsors .partners .image-container.sport {
+		margin-left: 37%;
+    margin-top: -3%;
+    width: 24%;
 	}
 }
 
