--- a/css/style.css
+++ b/css/style.css
@@ -1177,8 +1177,11 @@ footer {
 }
 
 #sponsors .industry-mid .image-container.enterprise {
-	width: 25%;
-	margin-left: 35%;
+	width: 48%;
+  margin-left: 24.5%;
+  float: left;
+  margin-top: -4%;
+  margin-bottom: -2%;
 }
 
 @media (max-width: 768px) {
@@ -1194,6 +1197,13 @@ footer {
 	.mixmax {
 		margin-top: 5%;
 		margin-right: 10%;
+	}
+
+	#sponsors .industry-mid .image-container.enterprise {
+		width: 64%;
+    margin-left: 15.5%;
+    margin-top: -8%;
+    margin-bottom: -1%;
 	}
 }
 
