--- a/css/style.css
+++ b/css/style.css
@@ -1259,24 +1259,24 @@ footer {
 
 #sponsors .industry-other .image-container.rr {
 	float: left;
-	margin-top: 2%;
-	margin-left: 21%;
-	margin-right: -1%;
-	width: 18%;
+  margin-top: 2.75%;
+  margin-left: 22%;
+  margin-right: -1%;
+  width: 18%;
 }
 
-#sponsors .industry-other .image-container.union {
+#sponsors .industry-other .image-container.slalom {
 	float: left;
-	width: 18%;
-	margin-top: 2%;
-	margin-left: 4%;
+  width: 16%;
+  margin-top: 1.75%;
+  margin-left: 4.5%;
 }
 
 #sponsors .industry-other .image-container.software {
 	float: right;
-	width: 14%;
-	margin-right: 23%;
-	margin-top: 2%;
+  width: 14%;
+  margin-right: 24%;
+  margin-top: 2%;
 }
 
 #sponsors .industry-other .image-container.cbo {
@@ -1352,11 +1352,10 @@ footer {
   margin-top: 2%;
 }
 
-#sponsors .industry-other .image-container.unger {
+#sponsors .industry-other .image-container.union {
 	float: left;
-  width: 17%;
-  margin-top: 3.5%;
-  margin-left: 5.5%;
+  margin-top: 3%;
+  margin-left: 3.75%;
 }
 
 #sponsors .industry-other .image-container.cards {
@@ -1415,11 +1414,11 @@ footer {
 		width: 24%;
 	}
 
-	#sponsors .industry-other .image-container.union {
+	#sponsors .industry-other .image-container.slalom {
 		float: left;
-		width: 24%;
-		margin-top: 1%;
-		margin-left: 4%;
+    width: 23%;
+    margin-top: 0%;
+    margin-left: 4.5%;
 	}
 
 	#sponsors .industry-other .image-container.software {
@@ -1489,10 +1488,10 @@ footer {
 		margin-top: -1%;
 	}
 
-	#sponsors .industry-other .image-container.unger {
-		width: 20%;
+	#sponsors .industry-other .image-container.union {
+		width: 23.5%;
     margin-top: 0.5%;
-    margin-left: 5.5%;
+    margin-left: 3.5%;
 	}
 
 	#sponsors .industry-other .image-container.cards {
