--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ h5 {
     padding-top: 10px;
 }
 
-p {
+p, #info ul {
     color: #707070;
     font-size: 14px;
     line-height: 24px;
@@ -134,9 +134,9 @@ footer {
     letter-spacing: 1px;
     font-size: 12px;
     padding: 14px 42px;
-    margin: 3rem auto 0 auto;
-		display: block;
-		width: 155px;
+    margin: -7rem 1rem 0 1rem;
+		display: inline-block;
+		width: 174px;
     -webkit-transition: all 0.4s ease-in-out;
     transition: all 0.4s ease-in-out;
 }
@@ -223,13 +223,32 @@ footer {
 /*---------------------------------------
     Navigation Links section
 -----------------------------------------*/
+.navbar-toggler {
+	color: rgba(0,0,0,.5);
+  border-color: rgba(255,255,255,.5);
+	padding: .25rem .75rem;
+  font-size: 1.25rem;
+  line-height: 1;
+  background-color: transparent;
+  border-width: 1px;
+	border-style: solid;
+  border-radius: .25rem;
+	margin: auto 0 auto auto;
+}
+.navbar-toggler-icon {
+	display: inline-block;
+  width: 1.5em;
+  height: 1.5em;
+  vertical-align: middle;
+  content: "";
+  background: no-repeat center center;
+  background-size: 100% 100%;
+	background-image: url("../images/hamburger.svg");
+}
+
 .custom-navbar {
     margin-bottom: 0;
 		transition: all linear 0.2s;
-}
-
-.custom-navbar .container {
-	display: flex;
 }
 
 .custom-navbar .navbar-collapse {
@@ -237,10 +256,19 @@ footer {
 	margin-right: 140px;
 }
 
+#hacker-guide .custom-navbar .navbar-collapse {
+	margin-right: 0;
+}
+
 @media (max-width: 1000px) {
 	.custom-navbar .navbar-collapse {
 		margin-left: auto;
 		margin-right: calc(10% + 40px);
+	}
+
+	#hacker-guide .custom-navbar .navbar-collapse {
+		margin-left: auto;
+		margin-right: 0;
 	}
 }
 
@@ -389,6 +417,7 @@ footer {
 
 #intro .container {
 	display: inline-block;
+	margin-top: 7rem;
 }
 
 #intro .row {
@@ -602,7 +631,7 @@ footer {
 	position: relative;
 }
 
-#overview::after, #speakers::after, #sponsors::after {
+#overview::after, #speakers::after, #sponsors::after, #info::after {
   content: "";
   background: url('../images/icons/pattern.png');
 	background-position: center;
@@ -1838,7 +1867,37 @@ footer {
   background: #f2545f;
 }
 
+/*---------------------------------------
+   Info section
+-----------------------------------------*/
 
+#info {
+	padding-top: 8rem;
+	padding-bottom: 4rem;
+}
+
+#info .container h1 {
+	text-align: center;
+	margin: 2rem 0;
+	font-size: 4rem;
+}
+
+#info .section-title {
+	margin-top: 3rem;
+	margin-bottom: 3rem;
+}
+
+#info img {
+	width: 100%;
+}
+
+#info ul {
+	padding-left: 4rem;
+}
+
+#info ul li {
+	list-style-type: disc;
+}
 
 /*---------------------------------------
    Footer section
@@ -1916,7 +1975,7 @@ footer p {
 -----------------------------------------*/
 @media (max-width: 980px) {
 
-  p {font-size: 13px;}
+  p, #info ul {font-size: 13px;}
 
   .custom-navbar .navbar-brand {
     font-size: 2rem;
@@ -1963,10 +2022,6 @@ footer p {
 		order: -1;
   }
 
-	.custom-navbar .navbar-header {
-		display: flex;
-	}
-
 	.custom-navbar .container {
 		display: block;
 	}
@@ -2002,4 +2057,45 @@ footer p {
     height: 100vh;
   }
 
+}
+
+@media (max-width: 2000px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
+    }
+
+		.custom-navbar .navbar-header {
+			display: flex;
+		}
 }
