--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,14 @@ footer {
     transition: all 0.4s ease-in-out;
 }
 
+@media (max-width: 430px) {
+	#intro .btn,
+	#contact .btn {
+    padding: 14px 12px;
+		width: 114px;
+	}
+}
+
 #intro .btn-danger,
 #contact .btn-danger {
     background: #f2545f;
@@ -2088,8 +2096,8 @@ footer p {
         float: none;
     }
     #hacker-guide .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
+        padding-top: 5px;
+        padding-bottom: 5px;
     }
     #hacker-guide .collapse.in{
         display:block !important;
