--- a/css/style.css
+++ b/css/style.css
@@ -437,6 +437,10 @@ footer {
 	margin-top: 7rem;
 }
 
+#intro .intro-buttons a.btn {
+	font-weight: bolder;
+}
+
 @media (max-width: 992px) {
 	.intro-buttons {
 		display: flex;
@@ -1945,7 +1949,7 @@ footer {
 -----------------------------------------*/
 footer {
   background-attachment: fixed;
-	background: #666;
+	background: transparent;
 	padding: 1rem 0;
 }
 
